@@ -14,12 +14,13 @@
 package com.indeed.imhotep.multicache;
 
 import java.util.*;
-import java.util.concurrent.*;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.*;
 
+import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import org.junit.*;
 import org.junit.rules.*;
-import org.junit.Assert.*;
 
 /**
  * @author jfinley
@@ -33,10 +34,10 @@ public class TestProcessingService {
     AtomicInteger     processorCleanupCounter;
     AtomicInteger     taskCleanupCounter;
     IntGenerator      generator;
-    ProcessingService service;
+    ExecutorService   executorService;
 
     @Rule
-    public Timeout globalTimeout = new Timeout(10000);
+    public Timeout globalTimeout = new Timeout(100000);
 
     @Rule
     public ExpectedException exception = ExpectedException.none();
@@ -47,79 +48,36 @@ public class TestProcessingService {
         processorCleanupCounter = new AtomicInteger(0);
         taskCleanupCounter      = new AtomicInteger(0);
         generator               = new IntGenerator(1000000);
-        service                 = new ProcessingService();
+        executorService         = createExecutorService();
     }
 
     @After
     public void tearDown() {
         Assert.assertEquals("processor cleanup", 0, processorCleanupCounter.get());
         Assert.assertEquals("task cleanup",      0, taskCleanupCounter.get());
+        executorService.shutdown();
     }
 
-    void normalTask(final int numTasks, Processor processor) {
-        for (int count = 0; count < numTasks; ++count)
-            service.addTask(new Task());
-        service.processData(generator, processor);
-    }
-
-    @Test public void task1() { normalTask(1, new Processor()); }
-    @Test public void task2() { normalTask(2, new Processor()); }
-    @Test public void task16() { normalTask(16, new Processor()); }
-    @Test public void task128() { normalTask(128, new Processor()); }
-    @Test public void taskDiscard1() { normalTask(1, null); }
-    @Test public void taskDiscard2() { normalTask(2, null); }
-    @Test public void taskDiscard16() { normalTask(16, null); }
-    @Test public void taskDiscard128() { normalTask(128, null); }
-
-    void brokenTask(final int numTasks, Processor processor) {
-        for (int count = 0; count < numTasks; ++count)
-            service.addTask(new BrokenTask());
-        exception.expect(ProcessingService.ProcessingServiceException.class);
-        service.processData(generator, new Processor());
-    }
-
-    @Test public void brokenTask1() { brokenTask(1, new Processor()); }
-    @Test public void brokenTask2() { brokenTask(2, new Processor()); }
-    @Test public void brokenTask16() { brokenTask(16, new Processor()); }
-    @Test public void brokenTask128() { brokenTask(128, new Processor()); }
-    @Test public void brokenTaskDiscard1() { brokenTask(1, null); }
-    @Test public void brokenTaskDiscard2() { brokenTask(2, null); }
-    @Test public void brokenTaskDiscard16() { brokenTask(16, null); }
-    @Test public void brokenTaskDiscard128() { brokenTask(128, null); }
-
-    void brokenProcessor(final int numTasks) {
-        for (int count = 0; count < numTasks; ++count)
-            service.addTask(new Task());
-        exception.expect(ProcessingService.ProcessingServiceException.class);
-        service.processData(generator, new BrokenProcessor());
-    }
-
-    @Test public void brokenProcessor1() { brokenProcessor(1); }
-    @Test public void brokenProcessor2() { brokenProcessor(2); }
-    @Test public void brokenProcessor16() { brokenProcessor(16); }
-    @Test public void brokenProcessor128() { brokenProcessor(128); }
-
-    void brokenTaskAndProcessor(final int numTasks) {
-        for (int count = 0; count < numTasks; ++count)
-            service.addTask(new BrokenTask());
-        exception.expect(ProcessingService.ProcessingServiceException.class);
-        service.processData(generator, new BrokenProcessor());
-    }
-
-    @Test public void brokenTaskAndProcessor1() { brokenTaskAndProcessor(1); }
-    @Test public void brokenTaskAndProcessor2() { brokenTaskAndProcessor(2); }
-    @Test public void brokenTaskAndProcessor16() { brokenTaskAndProcessor(16); }
-    @Test public void brokenTaskAndProcessor128() { brokenTaskAndProcessor(128); }
-
-    AdvProcessingService.TaskCoordinator<Long> newRouter(final int numTasks) {
-        return new AdvProcessingService.TaskCoordinator<Long>() {
+    ProcessingService.TaskCoordinator<Long> newRouter(final int numTasks) {
+        return new ProcessingService.TaskCoordinator<Long>() {
             @Override
-                public int route(Long data) { return Math.abs(data.intValue()) % numTasks; }
+                public int route(Long data) { return (int) Math.abs(data) % numTasks; }
         };
     }
 
+    private ExecutorService createExecutorService() {
+        final ThreadFactoryBuilder builder = new ThreadFactoryBuilder();
+        builder.setDaemon(true);
+        builder.setNameFormat("Native-FTGS-Thread -%d");
+        final ExecutorService threadPool;
+        threadPool = Executors.newCachedThreadPool(builder.build());
+
+        return threadPool;
+    }
+
     void advancedTask(final int numTasks, Processor processor) {
-        service = new AdvProcessingService<Long, Long>(newRouter(numTasks));
+        ProcessingService service =
+                new ProcessingService<Long, Long>(newRouter(numTasks), executorService);
         for (int count = 0; count < numTasks; ++count)
             service.addTask(new Task());
         service.processData(generator, processor);
@@ -135,7 +93,8 @@ public class TestProcessingService {
     @Test public void advancedTaskDiscard128() { advancedTask(128, null); }
 
     void advancedBrokenTask(final int numTasks, Processor processor) {
-        service = new AdvProcessingService<Long, Long>(newRouter(numTasks));
+        ProcessingService service = new ProcessingService<Long, Long>(newRouter(numTasks),
+                                                                      executorService);
         for (int count = 0; count < numTasks; ++count)
             service.addTask(new BrokenTask());
         exception.expect(ProcessingService.ProcessingServiceException.class);
@@ -152,7 +111,8 @@ public class TestProcessingService {
     @Test public void advancedBrokenTaskDiscard128() { advancedBrokenTask(128, null); }
 
     void advancedBrokenProcessor(final int numTasks) {
-        service = new AdvProcessingService<Long, Long>(newRouter(numTasks));
+        ProcessingService service = new ProcessingService<Long, Long>(newRouter(numTasks),
+                                                                      executorService);
         for (int count = 0; count < numTasks; ++count)
             service.addTask(new Task());
         exception.expect(ProcessingService.ProcessingServiceException.class);
@@ -165,7 +125,8 @@ public class TestProcessingService {
     @Test public void advancedBrokenProcessor128() { advancedBrokenProcessor(128); }
 
     void advancedBrokenTaskAndProcessor(final int numTasks) {
-        service = new AdvProcessingService<Long, Long>(newRouter(numTasks));
+        ProcessingService service = new ProcessingService<Long, Long>(newRouter(numTasks),
+                                                                      createExecutorService());
         for (int count = 0; count < numTasks; ++count)
             service.addTask(new BrokenTask());
         exception.expect(ProcessingService.ProcessingServiceException.class);
@@ -198,7 +159,7 @@ public class TestProcessingService {
             for (long value = data % 1023; value > 1; --value) {
                 result *= value;
             }
-            return Long.valueOf(result);
+            return new Long(result);
         }
     }
 
